examples/csharp/errors/invalid-request/obj/Debug/net8.0/InvalidRequest.csproj.CoreCompileInputs.cache
d942509f5a6d2f92e9321555576a900f6f2f5cea92983d8e94f4c0a60da6c73e
